--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,23 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
+    <script>
+      window.USE_REST_FOR_DDP_CALLS = true;
+    </script>
+    
+    <meta name="referrer" content="origin-when-cross-origin" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="
+        frame-src 'self' https://eboxtest.indenova.eu/;
+        object-src 'none'; 
+        base-uri 'none'"
+    />
+    <meta
+      http-equiv="Permissions-Policy"
+      content="geolocation=(self), fullscreen=(self), microphone=(*), camera=(*)"
+    />
   </head>
   <body>
     <app-root></app-root>
