--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <script>
       window.USE_REST_FOR_DDP_CALLS = true;
     </script>
-    
+
     <meta name="referrer" content="origin-when-cross-origin" />
     <meta
       http-equiv="Content-Security-Policy"
@@ -23,6 +23,14 @@
       http-equiv="Permissions-Policy"
       content="geolocation=(self), fullscreen=(self), microphone=(*), camera=(*)"
     />
+    <script
+      type="module"
+      src="https://cdneu2c001bfadev01.azureedge.net/wc/0.0.27/bio-bfa-web-components.esm.js"
+    ></script>
+    <script
+      nomodule=""
+      src="https://cdneu2c001bfadev01.azureedge.net/wc/0.0.27/bio-bfa-web-components.js"
+    ></script>
   </head>
   <body>
     <app-root></app-root>
