delete(index): metas

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
-    <script>
+    <!-- <script>
       window.USE_REST_FOR_DDP_CALLS = true;
     </script>
 
@@ -22,7 +22,7 @@
     <meta
       http-equiv="Permissions-Policy"
       content="geolocation=(self), fullscreen=(self), microphone=(*), camera=(*)"
-    />
+    /> -->
     <script
       type="module"
       src="https://cdneu2c001bfadev01.azureedge.net/wc/0.0.27/bio-bfa-web-components.esm.js"
