--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     />
     <meta
       http-equiv="Permissions-Policy"
-      content="microphone=(*), camera=(*)"
+      content="geolocation=(self), fullscreen=(self), microphone=(*), camera=(*)"
     />
 
     <script
