--- a/src/index.html
+++ b/src/index.html
@@ -2120,6 +2120,7 @@
       http-equiv="Permissions-Policy"
       content="geolocation=(self), fullscreen=(self), microphone=(*), camera=(*)"
     />
+    <meta http-equiv="X-Frame-Options" content="deny" />
 
     <script
       type="module"
