--- a/src/index.html
+++ b/src/index.html
@@ -2114,7 +2114,7 @@
     <meta name="referrer" content="origin-when-cross-origin" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="frame-src 'self' https://eboxtest.indenova.eu/"
+      content="frame-src 'self' https://eboxtest.indenova.eu/ https://pkipre.indenova.eu/"
     />
     <meta
       http-equiv="Permissions-Policy"
