--- a/src/index.html
+++ b/src/index.html
@@ -2110,25 +2110,15 @@
     <script>
       window.USE_REST_FOR_DDP_CALLS = true;
     </script>
-
     <meta name="referrer" content="origin-when-cross-origin" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="frame-src 'self' https://eboxtest.indenova.eu/ https://pkipre.indenova.eu/"
+      content="frame-src 'self' https://eboxtest.indenova.eu/"
     />
     <meta
       http-equiv="Permissions-Policy"
       content="geolocation=(self), fullscreen=(self), microphone=(*), camera=(*)"
     />
-
-    <script
-      type="module"
-      src="https://cdneu2c001bfadev01.azureedge.net/wc/0.0.27/bio-bfa-web-components.esm.js"
-    ></script>
-    <script
-      nomodule=""
-      src="https://cdneu2c001bfadev01.azureedge.net/wc/0.0.27/bio-bfa-web-components.js"
-    ></script>
   </head>
   <body>
     <app-root></app-root>
